correcciones sobre responsive en tag header, nav, footer en todo el sitio y page-home

--- a/pages/shop_info.html
+++ b/pages/shop_info.html
@@ -15,6 +15,7 @@
 
     <header id="header">
         <div class="titulo">
+            <div class="hambur">Hamburguesa</div>
             <h1>Great Stuff Ind.</h1>
             <div class="botones">
                 <img src="../img/lupa_1.png" alt="lupa" class="lupa"><!-- Botón -->
