Correcciones en >header y >nav en todo el sitio

--- a/pages/catalog.html
+++ b/pages/catalog.html
@@ -17,17 +17,17 @@
     <header id="header">
         <nav class="navbar navbar-expand-lg navbar-light encabezadoStyle">
             <div class="container-fluid encabezadoOrden">
-                <a class="navbar-brand" href="../index.html">Great Stuff Ind.</a>
+                <a class="navbar-brand" href="../index.html"><strong>Great Stuff Ind.</strong></a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
                 </button>
                 <div class="collapse navbar-collapse" id="navbarSupportedContent">
                     <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-                        <li class="color1"><a href="../index.html">Home   >>>  </a></li>
-                        <li class="color2"><a href="./object_keepers.html">"Object Keepers" Collection   >>></a></li>
-                        <li class="color3"><a href="./catalog.html">_001-017 Catalog   >>></a></li>
-                        <li class="color4"><a href="./us.html">Us   >>></a></li>
-                        <li class="color5"><a href="./shop_info.html">Shop Information   >>></a></li>
+                        <li class="cbHeader"><a href="../index.html">Home   <span class="color1header">>>></span></a></li>
+                        <li class="cbHeader"><a href="./object_keepers.html">"Object Keepers" Collection   <span class="color2header">>>></span></a></li>
+                        <li class="cbHeader"><a href="./catalog.html">_001-017 Catalog   <span class="color3header">>>></span></a></li>
+                        <li class="cbHeader"><a href="./us.html">Us   <span class="color4header">>>></span></a></li>
+                        <li class="cbHeader"><a href="./shop_info.html">Shop Information   <span class="color5header">>>></span></a></li>
                     </ul>
                 </div>
             </div>
