-Correcciones en >header y >nav, se afinan estilos y se agregan botones y form de Bootstrap. -Comienzo a trabajar con nuevas imagenes procesadas para el sitio, se crean estilos de card para tienda, en paginas Home y ObjectKeepers.

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 
     <header id="header">
         <nav class="navbar navbar-expand-lg navbar-light encabezadoStyle">
-            <div class="container-fluid encabezadoOrden">
+            <div class="container-fluid">
                 <a class="navbar-brand" href="./index.html"><strong>Great Stuff Ind.</strong></a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
@@ -24,11 +24,17 @@
                 <div class="collapse navbar-collapse" id="navbarSupportedContent">
                     <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                         <li class="cbHeader"><a href="./index.html">Home   <span class="color1header">>>></span></a></li>
-                        <li class="cbHeader"><a href="./pages/object_keepers.html">"Object Keepers" Collection   <span class="color2header">>>></span></a></li>
-                        <li class="cbHeader"><a href="./pages/catalog.html">_001-017 Catalog   <span class="color3header">>>></span></a></li>
+                        <li class="cbHeader"><a href="./pages/object_keepers.html">"Object Keepers"   <span class="color2header">>>></span></a></li>
+                        <li class="cbHeader"><a href="./pages/catalog.html">Catalog   <span class="color3header">>>></span></a></li>
                         <li class="cbHeader"><a href="./pages/us.html">Us   <span class="color4header">>>></span></a></li>
                         <li class="cbHeader"><a href="./pages/shop_info.html">Shop Information   <span class="color5header">>>></span></a></li>
+                        <li class="cbHeader"><a href="">cart (0) <i class="bi bi-bag text-white"></i></a></li>
                     </ul>
+                    <form class="d-flex formHeader">
+                        <input class="form-control me-2" type="search" placeholder="" aria-label="Search">
+                        <button class="btn btn-outline-dark" type="submit"><i class="bi bi-search"></i></button>
+                    </form>
+                    <i class="bi bi-bag btn btn-outline-dark bagHeader"></i>
                 </div>
             </div>
         </nav>
@@ -45,7 +51,7 @@
                     <li>Stuff
                         <ul class="fixpad2">
                             <li class="transitionColor2 padlist"><a href="./pages/object_keepers.html">"Object Keepers" Collection</a></li>
-                            <li class="transitionColor3 padlist"><a href="./pages/catalog.html">_001-017 Catalog</a></li>
+                            <li class="transitionColor3 padlist"><a href="./pages/catalog.html">Catalog</a></li>
                         </ul>
                     </li>
                     <li class="transitionColor4"><a href="./pages/us.html">Us</a></li>
@@ -67,23 +73,37 @@
             <h2><span class="color1">< We find and create stuff,</span><span class="color2"> we take care of stuff,</span><span class="color3"><br> we share stuff,</span><span class="color4"> we sell stuff! ></span></h2>
         </div>
         <div class="galeriaHome">
-            <div class="libretasH">
-                <img src="./img/stuff_002a_WEB.jpg" alt="libretas rojas" class="img_galeriaHome">
+            <div class="estiloCajas">
+                <img src="./img/stuff_021a_WEBfinal.jpg" alt="bandejas marmol" class="img_galeriaHome">
+                <p>¥¥¥¥¥¥</p>
             </div>
-            <div>
-                <img src="./img/stuff_029a_WEB.jpg" alt="bandeja lata" class="img_galeriaHome">
+            <div class="estiloCajas2">
+                <img src="./img/stuff_006_WEBfinal.jpg" alt="vaso" class="img_galeriaHome">
+                <p>¥¥¥¥¥¥</p>
             </div>
-            <div>
-                <img src="./img/stuff_006_WEB.jpg" alt="vaso" class="img_galeriaHome">
+            <div class="estiloCajas2">
+                <img src="./img/stuff_030_WEBfinal.jpg" alt="platos" class="img_galeriaHome">
+                <p>¥¥¥¥¥¥</p>
             </div>
-            <div>
-                <img src="./img/stuff_028_WEB.jpg" alt="balanza" class="img_galeriaHome">
+            <div class="estiloCajas2">
+                <img src="./img/stuff_002a_WEBfinal.jpg" alt="libretas rojas" class="img_galeriaHome">
+                <p>¥¥¥¥¥¥</p>
             </div>
-            <div>
-                <img src="./img/stuff_021b_WEB.jpg" alt="bandeja marmol" class="img_galeriaHome">
+            <div class="estiloCajas2">
+                <img src="./img/stuff_029a_WEBfinal.jpg" alt="bandeja lata" class="img_galeriaHome">
+                <p>¥¥¥¥¥¥</p>
             </div>
-            <div>
-                <img src="./img/stuff_022_WEB.jpg" alt="candados" class="img_galeriaHome">
+            <div class="estiloCajas2">
+                <img src="./img/stuff_022a_WEBfinal.jpg" alt="candados" class="img_galeriaHome">
+                <p>¥¥¥¥¥¥</p>
+            </div>
+            <div class="estiloCajas2">
+                <img src="./img/stuff_031_WEBfinal.jpg" alt="llaves" class="img_galeriaHome">
+                <p>¥¥¥¥¥¥</p>
+            </div>
+            <div class="estiloCajas2">
+                <img src="./img/stuff_003_WEBfinal.jpg" alt="portaretrato" class="img_galeriaHome">
+                <p>¥¥¥¥¥¥</p>
             </div>
         </div>
     </main>
