--- a/pages/object_keepers.html
+++ b/pages/object_keepers.html
@@ -16,7 +16,7 @@
 
     <header id="header">
         <nav class="navbar navbar-expand-lg navbar-light encabezadoStyle">
-            <div class="container-fluid encabezadoOrden">
+            <div class="container-fluid">
                 <a class="navbar-brand" href="../index.html"><strong>Great Stuff Ind.</strong></a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
@@ -24,11 +24,17 @@
                 <div class="collapse navbar-collapse" id="navbarSupportedContent">
                     <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                         <li class="cbHeader"><a href="../index.html">Home   <span class="color1header">>>></span></a></li>
-                        <li class="cbHeader"><a href="./object_keepers.html">"Object Keepers" Collection   <span class="color2header">>>></span></a></li>
-                        <li class="cbHeader"><a href="./catalog.html">_001-017 Catalog   <span class="color3header">>>></span></a></li>
+                        <li class="cbHeader"><a href="./object_keepers.html">"Object Keepers"   <span class="color2header">>>></span></a></li>
+                        <li class="cbHeader"><a href="./catalog.html">Catalog   <span class="color3header">>>></span></a></li>
                         <li class="cbHeader"><a href="./us.html">Us   <span class="color4header">>>></span></a></li>
                         <li class="cbHeader"><a href="./shop_info.html">Shop Information   <span class="color5header">>>></span></a></li>
+                        <li class="cbHeader"><a href="">cart (0) <i class="bi bi-bag text-white"></i></a></li>
                     </ul>
+                    <form class="d-flex formHeader">
+                        <input class="form-control me-2" type="search" placeholder="" aria-label="Search">
+                        <button class="btn btn-outline-dark" type="submit"><i class="bi bi-search"></i></button>
+                    </form>
+                    <i class="bi bi-bag btn btn-outline-dark bagHeader"></i>
                 </div>
             </div>
         </nav>
@@ -45,7 +51,7 @@
                     <li>Stuff
                         <ul class="fixpad2">
                             <li class="transitionColor2 padlist"><a href="./object_keepers.html">"Object Keepers" Collection</a></li>
-                            <li class="transitionColor3 padlist"><a href="./catalog.html">_001-017 Catalog</a></li>
+                            <li class="transitionColor3 padlist"><a href="./catalog.html">Catalog</a></li>
                         </ul>
                     </li>
                     <li class="transitionColor4"><a href="./us.html">Us</a></li>
@@ -67,23 +73,29 @@
             <p>This is our brand new collection, Lorem ipsum, dolor sit amet consectetur adipisicing elit. Molestias magni, laborum assumenda quas perferendis voluptatem mollitia optio magnam maxime a! Lorem ipsum, dolor sit amet consectetur adipisicing elit. Quae officia consectetur similique eum aut. Voluptas. </p>
         </div>
         <div class="galeriaOk">
-            <div class="tablasMarmol">
-                <img src="../img/stuff_021a_WEB.jpg" alt="bandejas marmol" class="img_galeriaOk">
+            <div class="estiloCajas">
+                <img src="../img/stuff_021a_WEBfinal.jpg" alt="bandejas marmol" class="img_galeriaOk">
+                <p>¥¥¥¥¥¥</p>
             </div>
-            <div>
-                <img src="../img/stuff_013_WEB.jpg" alt="bandeja ceramica" class="img_galeriaOk">
+            <div class="estiloCajas">
+                <img src="../img/stuff_021b_WEBfinal.jpg" alt="bandejas marmol" class="img_galeriaOk">
+                <p>¥¥¥¥¥¥</p>
             </div>
-            <div>
-                <img src="../img/stuff_012_WEB.jpg" alt="bandeja ceramica" class="img_galeriaOk">
+            <div class="estiloCajas">
+                <img src="../img/stuff_010_WEBfinal.jpg" alt="cuchillo blanco" class="img_galeriaOk">
+                <p>¥¥¥¥¥¥</p>
             </div>
-            <div class="cuchilloBlanco">
-                <img src="../img/stuff_010_WEB.jpg" alt="cuchillo blanco" class="img_galeriaOk">
+            <div class="estiloCajas">
+                <img src="../img/stuff_009_WEBfinal.jpg" alt="cuchillo negro" class="img_galeriaOk">
+                <p>¥¥¥¥¥¥</p>
             </div>
-            <div class="cuchilloNegro">
-                <img src="../img/stuff_009_WEB.jpg" alt="cuchillo negro" class="img_galeriaOk">
+            <div class="estiloCajas">
+                <img src="../img/stuff_012_WEBfinal.jpg" alt="bandeja ceramica" class="img_galeriaOk">
+                <p>¥¥¥¥¥¥</p>
             </div>
-            <div class="cuchilloNegro2">
-                <img src="../img/stuff_018_WEB.jpg" alt="cuchillo negro" class="img_galeriaOk">
+            <div class="estiloCajas">
+                <img src="../img/stuff_013_WEBfinal.jpg" alt="bandeja ceramica" class="img_galeriaOk">
+                <p>¥¥¥¥¥¥</p>
             </div>
         </div>
     </section>
