-Trabajo en page Catalog con imagenes y estilos de card. -Agrego botones de bootstrap al footer. -Correcciones responsive de iframe.

--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
                 <p>¥¥¥¥¥¥</p>
             </div>
             <div class="estiloCajas2">
-                <img src="./img/stuff_031_WEBfinal.jpg" alt="llaves" class="img_galeriaHome">
+                <img src="./img/stuff_031_WEBfinal.jpg" alt="lapiceras-llaves" class="img_galeriaHome">
                 <p>¥¥¥¥¥¥</p>
             </div>
             <div class="estiloCajas2">
@@ -110,6 +110,10 @@
 
     <footer id="footer">
         &copy; 2022 GREAT STUFF INDUSTRIES - All rights reserved.
+        <div>
+            <i class="bi bi-instagram"></i>
+            <i class="bi bi-youtube"></i>
+        </div>
     </footer>
 
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.10.2/dist/umd/popper.min.js" integrity="sha384-7+zCNj/IqJ95wo16oMtfsKbZ9ccEh31eOz1HGyDuCQ6wgnyJNSYdrPa03rtR1zdB" crossorigin="anonymous"></script>
