--- a/pages/catalog.html
+++ b/pages/catalog.html
@@ -72,50 +72,71 @@
             <h2> < The stuff! Find your favourites! > </h2>
         </div>
         <div class="galeriaCatalog">
-            <div class="vasoC">
-                <img src="../img/stuff_006_WEB.jpg" alt="vaso" class="img_galeriaCatalog">
+            <div class="estiloCajas2">
+                <img src="../img/stuff_006_WEBfinal.jpg" alt="vaso" class="img_galeriaCatalog">
+                <p>¥¥¥¥¥¥</p>
             </div>
-            <div class="vaso2">
-                <img src="../img/stuff_005_WEB.jpg" alt="vaso" class="img_galeriaCatalog">
+            <div class="estiloCajas2">
+                <img src="../img/stuff_005_WEBfinal.jpg" alt="vaso" class="img_galeriaCatalog">
+                <p>¥¥¥¥¥¥</p>
             </div>
-            <div class="bandejaCobre">
-                <img src="../img/stuff_002a_WEBfinal.jpg" alt="bandeja cobre" class="img_galeriaCatalog">
+            <div class="estiloCajas2">
+                <img src="../img/stuff_007_WEBfinal.jpg" alt="bandeja cobre" class="img_galeriaCatalog">
+                <p>¥¥¥¥¥¥</p>
             </div>
-            <div class="libretasC">
-                <img src="../img/stuff_002a_WEB.jpg" alt="libretas rojas" class="img_galeriaCatalog">
+            <div class="estiloCajas2">
+                <img src="../img/stuff_027_WEBfinal.jpg" alt="bandeja vidrio" class="img_galeriaCatalog">
+                <p>¥¥¥¥¥¥</p>
             </div>
-            <div class="lapiceras">
-                <img src="../img/stuff_008_WEB.jpg" alt="lapiceras" class="img_galeriaCatalog">
+            <div class="estiloCajas2">
+                <img src="../img/stuff_008_WEBfinal.jpg" alt="lapiceras" class="img_galeriaCatalog">
+                <p>¥¥¥¥¥¥</p>
             </div>
-            <div>
-                <img src="../img/stuff_027_WEB.jpg" alt="bandeja vidrio" class="img_galeriaCatalog">
+            <div class="estiloCajas2">
+                <img src="../img/stuff_002a_WEBfinal.jpg" alt="libretas rojas" class="img_galeriaCatalog">
+                <p>¥¥¥¥¥¥</p>
             </div>
-            <div>
-                <img src="../img/stuff_016_WEB.jpg" alt="caja de cobre" class="img_galeriaCatalog">
+            <div class="estiloCajas2">
+                <img src="../img/stuff_016_WEBfinal.jpg" alt="caja de cobre" class="img_galeriaCatalog">
+                <p>¥¥¥¥¥¥</p>
             </div>
-            <div>
-                <img src="../img/stuff_003_WEB.jpg" alt="portaretrato" class="img_galeriaCatalog">
+            <div class="estiloCajas2">
+                <img src="../img/stuff_003_WEBfinal.jpg" alt="portaretrato" class="img_galeriaCatalog">
+                <p>¥¥¥¥¥¥</p>
             </div>
-            <div>
-                <img src="../img/stuff_029a_WEB.jpg" alt="bandeja lata" class="img_galeriaCatalog">
+            <div class="estiloCajas2">
+                <img src="../img/stuff_029a_WEBfinal.jpg" alt="bandeja lata" class="img_galeriaCatalog">
+                <p>¥¥¥¥¥¥</p>
             </div>
-            <div>
-                <img src="../img/stuff_022_WEB.jpg" alt="candados" class="img_galeriaCatalog">
+            <div class="estiloCajas2">
+                <img src="../img/stuff_022b_WEBfinal.jpg" alt="candados" class="img_galeriaCatalog">
+                <p>¥¥¥¥¥¥</p>
             </div>
-            <div>
-                <img src="../img/stuff_028_WEB.jpg" alt="balanza" class="img_galeriaCatalog">
+            <div class="estiloCajas2">
+                <img src="../img/stuff_030_WEBfinal.jpg" alt="platos" class="img_galeriaCatalog">
+                <p>¥¥¥¥¥¥</p>
             </div>
-            <div>
-                <img src="../img/stuff_011_WEB.jpg" alt="tablas madera" class="img_galeriaCatalog">
+            <div class="estiloCajas2">
+                <img src="../img/stuff_011b_WEBfinal.jpg" alt="tablas madera" class="img_galeriaCatalog">
+                <p>¥¥¥¥¥¥</p>
             </div>
-            <div>
-                <img src="../img/stuff_026_WEB.jpg" alt="bolso" class="img_galeriaCatalog">
+            <div class="estiloCajas2">
+                <img src="../img/stuff_032_WEBfinal.jpg" alt="lupas" class="img_galeriaCatalog">
+                <p>¥¥¥¥¥¥</p>
+            </div>
+            <div class="estiloCajas2">
+                <img src="../img/stuff_031_WEBfinal.jpg" alt="lapiceras-llaves" class="img_galeriaCatalog">
+                <p>¥¥¥¥¥¥</p>
             </div>
         </div>
     </section>
 
     <footer id="footer">
         &copy; 2022 GREAT STUFF INDUSTRIES - All rights reserved.
+        <div>
+            <i class="bi bi-instagram"></i>
+            <i class="bi bi-youtube"></i>
+        </div>
     </footer>
 
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.10.2/dist/umd/popper.min.js" integrity="sha384-7+zCNj/IqJ95wo16oMtfsKbZ9ccEh31eOz1HGyDuCQ6wgnyJNSYdrPa03rtR1zdB" crossorigin="anonymous"></script>
