--- a/pages/shop_info.html
+++ b/pages/shop_info.html
@@ -72,14 +72,14 @@
         <!-- Contact -->
         <div class="contact">
             <h2> < Contact > </h2>
-            <div>
+            <div class="formContact">
                 <div class="mb-3">
                     <label for="exampleFormControlInput1" class="form-label">Email address</label>
                     <input type="email" class="form-control" id="exampleFormControlInput1" placeholder="Enter your e-mail">
                 </div>
                 <div class="mb-3">
                     <label for="exampleFormControlTextarea1" class="form-label">Text</label>
-                    <textarea class="form-control" id="exampleFormControlTextarea1" rows="3"></textarea>
+                    <textarea class="form-control" id="exampleFormControlTextarea1" rows="8"></textarea>
                 </div>
             </div>
         </div>
