-Trabajo en todo el sitio. Agrego estilos de card, botones, estilo de >footer. -Aplico map, map-get, mixin y extend.

--- a/index.html
+++ b/index.html
@@ -73,37 +73,45 @@
             <h2><span class="color1">< We find and create stuff,</span><span class="color2"> we take care of stuff,</span><span class="color3"><br> we share stuff,</span><span class="color4"> we sell stuff! ></span></h2>
         </div>
         <div class="galeriaHome">
-            <div class="estiloCajas">
+            <div class="estiloCajas3">
                 <img src="./img/stuff_021a_WEBfinal.jpg" alt="bandejas marmol" class="img_galeriaHome">
-                <p>¥¥¥¥¥¥</p>
+                <p>>MARBLE CUTTING BOARD</p>
             </div>
-            <div class="estiloCajas2">
+            <div class="estiloCajas3">
+                <img src="./img/stuff_010_WEBfinal.jpg" alt="cuchillo blanco" class="img_galeriaHome">
+                <p>>CERAMIC PARING KNIFE</p>
+            </div>
+            <div class="estiloCajas3">
                 <img src="./img/stuff_006_WEBfinal.jpg" alt="vaso" class="img_galeriaHome">
-                <p>¥¥¥¥¥¥</p>
+                <p>>GLASS MUG</p>
             </div>
-            <div class="estiloCajas2">
+            <div class="estiloCajas3">
                 <img src="./img/stuff_030_WEBfinal.jpg" alt="platos" class="img_galeriaHome">
-                <p>¥¥¥¥¥¥</p>
+                <p>>ENAMEL SERVING SET</p>
             </div>
-            <div class="estiloCajas2">
+            <div class="estiloCajas3">
                 <img src="./img/stuff_002a_WEBfinal.jpg" alt="libretas rojas" class="img_galeriaHome">
-                <p>¥¥¥¥¥¥</p>
+                <p>>ACCOUNT BOOK</p>
             </div>
-            <div class="estiloCajas2">
+            <div class="estiloCajas3">
                 <img src="./img/stuff_029a_WEBfinal.jpg" alt="bandeja lata" class="img_galeriaHome">
-                <p>¥¥¥¥¥¥</p>
+                <p>>STEEL STAR TRAY</p>
             </div>
-            <div class="estiloCajas2">
+            <div class="estiloCajas3">
                 <img src="./img/stuff_022a_WEBfinal.jpg" alt="candados" class="img_galeriaHome">
-                <p>¥¥¥¥¥¥</p>
+                <p>>PADLOCK</p>
             </div>
-            <div class="estiloCajas2">
+            <div class="estiloCajas3">
                 <img src="./img/stuff_031_WEBfinal.jpg" alt="lapiceras-llaves" class="img_galeriaHome">
-                <p>¥¥¥¥¥¥</p>
+                <p>>KEY SHAPED PEN</p>
             </div>
-            <div class="estiloCajas2">
+            <div class="estiloCajas3">
+                <img src="./img/stuff_032_WEBfinal.jpg" alt="lupas" class="img_galeriaHome">
+                <p>>MAGNIFYING GLASS</p>
+            </div>
+            <div class="estiloCajas3">
                 <img src="./img/stuff_003_WEBfinal.jpg" alt="portaretrato" class="img_galeriaHome">
-                <p>¥¥¥¥¥¥</p>
+                <p>>ACRYLIC FRAME</p>
             </div>
         </div>
     </main>
