--- a/pages/catalog.html
+++ b/pages/catalog.html
@@ -74,59 +74,73 @@
         <div class="galeriaCatalog">
             <div class="estiloCajas2">
                 <img src="../img/stuff_006_WEBfinal.jpg" alt="vaso" class="img_galeriaCatalog">
-                <p>¥¥¥¥¥¥</p>
+                <p>>BOROSILICATE GLASS MUG - ¥1,100</p>
+                <a href="#" class="btn-violet">Buy!</a>
             </div>
             <div class="estiloCajas2">
                 <img src="../img/stuff_005_WEBfinal.jpg" alt="vaso" class="img_galeriaCatalog">
-                <p>¥¥¥¥¥¥</p>
+                <p>>BOROSILICATE GLASS MUG - ¥1,100</p>
+                <a href="#" class="btn-violet">Buy!</a>
             </div>
             <div class="estiloCajas2">
                 <img src="../img/stuff_007_WEBfinal.jpg" alt="bandeja cobre" class="img_galeriaCatalog">
-                <p>¥¥¥¥¥¥</p>
+                <p>>BRASS RECTANGLE TRAY - ¥7,480</p>
+                <a href="#" class="btn-violet">Buy!</a>
             </div>
             <div class="estiloCajas2">
                 <img src="../img/stuff_027_WEBfinal.jpg" alt="bandeja vidrio" class="img_galeriaCatalog">
-                <p>¥¥¥¥¥¥</p>
+                <p>>STAINED GLASS TRAY - ¥3,520</p>
+                <a href="#" class="btn-violet">Buy!</a>
             </div>
             <div class="estiloCajas2">
                 <img src="../img/stuff_008_WEBfinal.jpg" alt="lapiceras" class="img_galeriaCatalog">
-                <p>¥¥¥¥¥¥</p>
+                <p>>BULK PACK BALLPOINT PENS - ¥880</p>
+                <a href="#" class="btn-violet">Buy!</a>
             </div>
             <div class="estiloCajas2">
                 <img src="../img/stuff_002a_WEBfinal.jpg" alt="libretas rojas" class="img_galeriaCatalog">
-                <p>¥¥¥¥¥¥</p>
+                <p>>ACCOUNT BOOK - ¥1,650</p>
+                <a href="#" class="btn-violet">Buy!</a>
             </div>
             <div class="estiloCajas2">
                 <img src="../img/stuff_016_WEBfinal.jpg" alt="caja de cobre" class="img_galeriaCatalog">
-                <p>¥¥¥¥¥¥</p>
+                <p>>JAPANESE MOSQUITO COIL HOLDER - ¥4,400</p>
+                <a href="#" class="btn-violet">Buy!</a>
             </div>
             <div class="estiloCajas2">
                 <img src="../img/stuff_003_WEBfinal.jpg" alt="portaretrato" class="img_galeriaCatalog">
-                <p>¥¥¥¥¥¥</p>
+                <p>>ACRYLIC FRAME / 10.5 x 14 - ¥2,420</p>
+                <a href="#" class="btn-violet">Buy!</a>
             </div>
             <div class="estiloCajas2">
                 <img src="../img/stuff_029a_WEBfinal.jpg" alt="bandeja lata" class="img_galeriaCatalog">
-                <p>¥¥¥¥¥¥</p>
+                <p>>STEEL STAR TRAY - ¥1,320</p>
+                <a href="#" class="btn-violet">Buy!</a>
             </div>
             <div class="estiloCajas2">
                 <img src="../img/stuff_022b_WEBfinal.jpg" alt="candados" class="img_galeriaCatalog">
-                <p>¥¥¥¥¥¥</p>
+                <p>>PADLOCK - ¥550</p>
+                <a href="#" class="btn-violet">Buy!</a>
             </div>
             <div class="estiloCajas2">
                 <img src="../img/stuff_030_WEBfinal.jpg" alt="platos" class="img_galeriaCatalog">
-                <p>¥¥¥¥¥¥</p>
+                <p>>ENAMEL SERVING SET - ¥5,280</p>
+                <a href="#" class="btn-violet">Buy!</a>
             </div>
             <div class="estiloCajas2">
                 <img src="../img/stuff_011b_WEBfinal.jpg" alt="tablas madera" class="img_galeriaCatalog">
-                <p>¥¥¥¥¥¥</p>
+                <p>>CUTTING BOARD - ¥3,300</p>
+                <a href="#" class="btn-violet">Buy!</a>
             </div>
             <div class="estiloCajas2">
                 <img src="../img/stuff_032_WEBfinal.jpg" alt="lupas" class="img_galeriaCatalog">
-                <p>¥¥¥¥¥¥</p>
+                <p>>MAGNIFYING GLASS - ¥2,200</p>
+                <a href="#" class="btn-violet">Buy!</a>
             </div>
             <div class="estiloCajas2">
                 <img src="../img/stuff_031_WEBfinal.jpg" alt="lapiceras-llaves" class="img_galeriaCatalog">
-                <p>¥¥¥¥¥¥</p>
+                <p>>KEY SHAPED PEN - ¥1,980</p>
+                <a href="#" class="btn-violet">Buy!</a>
             </div>
         </div>
     </section>
