--- a/pages/object_keepers.html
+++ b/pages/object_keepers.html
@@ -68,34 +68,40 @@
     </div>
 
     <section id="sectionOk">
-        <div>
+        <div class="tituloOk">
             <h2> <"Object Keepers"> </h2>
             <p>This is our brand new collection, Lorem ipsum, dolor sit amet consectetur adipisicing elit. Molestias magni, laborum assumenda quas perferendis voluptatem mollitia optio magnam maxime a! Lorem ipsum, dolor sit amet consectetur adipisicing elit. Quae officia consectetur similique eum aut. Voluptas. </p>
         </div>
         <div class="galeriaOk">
             <div class="estiloCajas">
                 <img src="../img/stuff_021a_WEBfinal.jpg" alt="bandejas marmol" class="img_galeriaOk">
-                <p>¥¥¥¥¥¥</p>
+                <p>>MARBLE CUTTING BOARD - ¥3,300</p>
+                <a href="#" class="btn-red">Buy!</a>
             </div>
             <div class="estiloCajas">
                 <img src="../img/stuff_021b_WEBfinal.jpg" alt="bandejas marmol" class="img_galeriaOk">
-                <p>¥¥¥¥¥¥</p>
+                <p>>MARBLE CUTTING BOARD - ¥3,300</p>
+                <a href="#" class="btn-red">Buy!</a>
             </div>
             <div class="estiloCajas">
                 <img src="../img/stuff_010_WEBfinal.jpg" alt="cuchillo blanco" class="img_galeriaOk">
-                <p>¥¥¥¥¥¥</p>
+                <p>>CERAMIC PARING KNIFE w - ¥3,850</p>
+                <a href="#" class="btn-red">Buy!</a>
             </div>
             <div class="estiloCajas">
                 <img src="../img/stuff_009_WEBfinal.jpg" alt="cuchillo negro" class="img_galeriaOk">
-                <p>¥¥¥¥¥¥</p>
+                <p>>CERAMIC PARING KNIFE b - ¥3,850</p>
+                <a href="#" class="btn-red">Buy!</a>
             </div>
             <div class="estiloCajas">
                 <img src="../img/stuff_012_WEBfinal.jpg" alt="bandeja ceramica" class="img_galeriaOk">
-                <p>¥¥¥¥¥¥</p>
+                <p>>DECORATION TRAY - ¥880</p>
+                <a href="#" class="btn-red">Buy!</a>
             </div>
             <div class="estiloCajas">
                 <img src="../img/stuff_013_WEBfinal.jpg" alt="bandeja ceramica" class="img_galeriaOk">
-                <p>¥¥¥¥¥¥</p>
+                <p>>DECORATION TRAY - ¥880</p>
+                <a href="#" class="btn-red">Buy!</a>
             </div>
         </div>
     </section>
