--- a/pages/shop_info.html
+++ b/pages/shop_info.html
@@ -75,7 +75,7 @@
             <div class="formContact">
                 <div class="mb-3">
                     <label for="exampleFormControlInput1" class="form-label">Email address</label>
-                    <input type="email" class="form-control" id="exampleFormControlInput1" placeholder="Enter your e-mail">
+                    <input type="email" class="form-control" id="exampleFormControlInput1" placeholder="">
                 </div>
                 <div class="mb-3">
                     <label for="exampleFormControlTextarea1" class="form-label">Text</label>
