--- a/pages/object_keepers.html
+++ b/pages/object_keepers.html
@@ -4,7 +4,10 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Object Keepers</title>
+    <title>GS - Object Keepers</title>
+    <meta name="description" content="busqueda, restauracion, creacion y venta de objetos">
+    <meta name="keywords" content="stuff, great, object, objects, keepers, collection, retail">
+    <link rel="shortcut icon" href="../img/GS_logo_3.png" type="image/x-icon">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Red+Hat+Mono:ital,wght@0,700;1,300&display=swap" rel="stylesheet">
@@ -17,7 +20,7 @@
     <header id="header">
         <nav class="navbar navbar-expand-lg navbar-light encabezadoStyle">
             <div class="container-fluid">
-                <a class="navbar-brand" href="../index.html"><strong>Great Stuff Ind.</strong></a>
+                <h1><a class="navbar-brand" href="../index.html"><strong>Great Stuff Ind.</strong></a></h1>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
                 </button>
