-Trabajo en parrafos.

--- a/pages/us.html
+++ b/pages/us.html
@@ -73,19 +73,12 @@
     <section id="sectionUs">
         <div>
             <h2> < US > </h2>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quos, recusandae eum 
-            optio facere, quis temporibus fugiat voluptas commodi quasi quisquam beatae neque 
-            rem dignissimos voluptatum amet autem quae perspiciatis suscipit. Lorem ipsum dolor 
-            sit amet, consectetur adipisicing elit. Tenetur aperiam beatae deserunt? Esse sequi 
-            fugit ipsa voluptate molestiae ipsam eaque numquam et quos ex libero blanditiis, 
-            explicabo odio in dolorem? Lorem ipsum, dolor sit amet consectetur adipisicing elit. 
-            Ducimus pariatur a soluta at eos. Quas eaque similique obcaecati, temporibus perferendis 
-            tempore vero ducimus aspernatur itaque accusantium commodi maiores inventore esse.</p>
+            <p>We are a team of dedicated and creative friends with a love for raw materials and simple functional stuff. We are Nico, Lucas and Tom, a front-end developer, an industrial designer and a photographer. We enjoy the adventure of seeking and discovering unique objects, restoring them to mint condition in our workshop and finding them a new home. </p>
         </div>
         <div><!-- Video -->
             <h3>WORKSHOP >>> </h3>
             <div class="videoUs">
-                <iframe class="youtube" src="https://www.youtube.com/embed/XkUV1Ry9q7Q" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                <iframe class="youtube" width="560" height="315" src="https://www.youtube.com/embed/WPDJh-NVeYM" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
             </div>
         </div>
     </section>
