--- a/pages/object_keepers.html
+++ b/pages/object_keepers.html
@@ -73,7 +73,7 @@
     <section id="sectionOk">
         <div class="tituloOk">
             <h2> <"Object Keepers"> </h2>
-            <p>This is our brand new collection, Lorem ipsum, dolor sit amet consectetur adipisicing elit. Molestias magni, laborum assumenda quas perferendis voluptatem mollitia optio magnam maxime a! Lorem ipsum, dolor sit amet consectetur adipisicing elit. Quae officia consectetur similique eum aut. Voluptas. </p>
+            <p>This is our brand new collection. We found marble fragments and dusty old forgotten trays in an abandoned workshop in the south of Buenos Aires province, we polished and restored them! The knives are new, made with ceramic exclusively for Great Stuff Ind., they are extra sharp!</p>
         </div>
         <div class="galeriaOk">
             <div class="estiloCajas">
